# MFoES02w

./: .gitignore  CMakeLists.txt  README.md  build-cross.sh  uploadsd.bat  wbuild.bat  wslbuild.sh
.claude/: settings.local.json
cmake/: aarch64-alpine-musl.cmake
include/: GaugeWidget.h  app.h  dts.h  gpio_sysfs.h  outgauge.h  usbd_client.h  ws2812_spi.h
libs/UIDisplayWidgets/: CMakeLists.txt  UIwidget.cpp  UIwidget.h
libs/hwinterface/: 74hc165.cpp  74hc165.h  CMakeLists.txt  ads1115.cpp  ads1115.h  gpio_sysfs.cpp  gpio_sysfs.h  gt911.cpp  gt911.h  i2c_dev.cpp  i2c_dev.h  protocol.h  pwm.cpp  pwm.h  ring_buffer.h  southbridge.cpp  southbridge.h  spi_dev.cpp  spi_dev.h  spi_device.h  usbd_client.cpp  usbd_client.h
libs/libgfx/: CMAKE_CONFIGURATION.md  CMakeLists.txt  GFX.cpp  GFX.h  sdl_build.md
libs/libgfx/examples/: CMakeLists.txt  example_simple.cpp  readme.md
libs/libgfx/examples_SDL/: CMakeLists.txt  example_input.cpp  example_paint.cpp
libs/linfo/: CMakeLists.txt  example.main.cpp  linfo.cpp  linfo.h
libs/uisys/: CMakeLists.txt  button_widget.cpp  button_widget.h  combobox_widget.cpp  combobox_widget.h  dial_widget.cpp  dial_widget.h  dialog_widget.cpp  dialog_widget.h  font.h  keyboard_widget.cpp  keyboard_widget.h  manager.cpp  manager.h  slider_widget.cpp  slider_widget.h  spinbox_widget.cpp  spinbox_widget.h  textedit_widget.cpp  textedit_widget.h
services/: otad.cpp  usbd.cpp
southbridge/: README.md  SouthbridgePico.cpp  SouthbridgePico.h  protocol.h  southbridge.ino
src/: app.cpp  main.cpp  ui.cpp  usb_handling.cpp
tools/: DTS_videotransfer.py  ota_usb_upload.py  sb_protocol.py  spi_tester.py  ttf_to_adafruit.py  usb_channel.py
